# scbs

./: .gitignore  .gitmodules  README.md
affinity/: datasheet_diagrams.afdesign  front_panel_label.afdesign
excel/: design_calcs.xlsx
firmware/: README.md
firmware/firmware/: CMakeLists.txt
firmware/firmware/inc/: CMakeLists.txt
firmware/firmware/inc/app/: CMakeLists.txt  scbs.hh  scbs_comms.hh
firmware/firmware/inc/gps/: CMakeLists.txt  gps_utils.hh  nmea_utils.hh  pa1616s.hh
firmware/firmware/src/: CMakeLists.txt  main.cpp
firmware/firmware/src/app/: CMakeLists.txt  geeps_gui.cc  scbs.cc  scbs_comms.cc
firmware/firmware/src/gps/: CMakeLists.txt  gps_utils.cc  nmea_utils.cc  pa1616s.cc
firmware/test/: CMakeLists.txt
firmware/test/inc/: CMakeLists.txt  pico.h
firmware/test/inc/hardware/: platform_defs.h  timer.h
firmware/test/src/: CMakeLists.txt  test_gps.cpp  test_gps_tools.cpp  test_scbs_comms.cpp
kicad/: .gitignore
kicad/scbs_array/: fp-info-cache  fp-lib-table  lib_sch.kicad_sym  scbs_array.kicad_pcb  scbs_array.kicad_pro  scbs_array.kicad_sch  sym-lib-table
kicad/scbs_array/fab/: scbs_array.html
kicad/scbs_array/lib_fp.pretty/: SCBS_Pico.kicad_mod
kicad/scbs_demo/: #auto_saved_files#  scbs_demo.kicad_pro  scbs_demo.kicad_sch
kicad/scbs_demo/fab/: scbs_demo.html
kicad/scbs_pico/: fp-info-cache  scbs_pico.html  scbs_pico.kicad_pcb  scbs_pico.kicad_pro  scbs_pico.kicad_sch  scbs_pico.xml
kicad/scbs_pico/bom/: scbs_pico.xlsx
kicad/scbs_pico/fab/: scbs_pico.html
kicad/scbs_stm32g4/: scbs_stm32g4.kicad_pcb  scbs_stm32g4.kicad_pro  scbs_stm32g4.kicad_sch  scbs_stm32g4.kicad_sch-bak  sym-lib-table
kicad/scbs_stm32g4/bom/: scbs_stm32g4.csv
ltspice/: cmd_pwm_tran.asc  diff_amp_sim_ac.asc  diff_amp_sim_ac.net  diff_amp_sim_offset_tran.asc  diff_amp_sim_offset_tran.net  diff_amp_sim_tran.asc  diff_amp_sim_tran.net  idea_sim.asc  lmx58_lm2904.lib  lt1117_sim.asc  npn_output_sim.asc  rail_output_sim.asc  rail_output_sim_ac.asc  rail_output_sim_tran.asc  rail_output_sim_tran_lm358.asc
scripts/: pyproject.toml  scbs_spammer.py  scbs_utils.py
solidworks/: .gitignore  scbs_array_enclosed_assy.SLDASM
solidworks/fab/: enclosure_back_shell.STL  enclosure_front_panel.STL  enclosure_parts.3mf
solidworks/scbs_array/: 2022_06_08_09_32_02_0611.SLDPRT  2022_06_08_09_32_02_0615.SLDPRT  2022_06_08_09_32_02_0619.SLDPRT  2022_06_08_09_32_02_0623.SLDPRT  2022_06_08_09_32_02_0627.SLDPRT  2022_06_08_09_32_02_0631.SLDPRT  2022_06_08_09_32_02_0635.SLDPRT  2022_06_08_09_32_02_0653.SLDPRT  2022_06_08_09_32_02_0684.SLDPRT  2022_06_08_09_32_02_0715.SLDPRT  2022_06_08_09_32_02_0746.SLDPRT  2022_06_08_09_32_02_0778.SLDPRT  2022_06_08_09_32_02_0809.SLDPRT  2022_06_08_09_32_02_0840.SLDPRT  2022_06_08_09_32_02_0871.SLDPRT  COMPOUND-3.SLDPRT  COMPOUND.SLDPRT  CP_Radial_D5.0mm_P2.50mm.SLDASM  C_0805_2012Metric.SLDASM  Converter_DCDC_TRACO_TMR-xxxx_THT.SLDASM  D_MELF.SLDASM  PhoenixContact_MSTBA_2,5_5-G-5,08_1x05_P5.08mm_Horizontal.SLDASM  PinHeader_1x03_P2.54mm_Horizontal.SLDASM  PinSocket_1x06_P2.54mm_Vertical.SLDASM  R_0805_2012Metric.SLDASM  SOFNG_DC005-T20.SLDASM  SOLID-0.SLDPRT  SOLID-1.SLDPRT  SOLID-2.SLDPRT  SOLID-4.SLDPRT  SOLID-5.SLDPRT  SOLID-6.SLDPRT  SOLID-7.SLDPRT  SOLID-8.SLDPRT  SOLID.SLDPRT  TO-220-3_Horizontal_TabDown.SLDASM  pxc_1757048_06_MSTB-2-5-5-ST-5-08_3D.SLDASM  scbs_array PCB.SLDPRT  scbs_array_pcba.SLDASM  scbs_pico.SLDASM
solidworks/scbs_array_enclosure/: front_panel.SLDDRW
word/: datasheet_cellsim_4s.docx  datasheet_scbs_pico.docx  design_notebook.docx
(+1 files in other folders)
